# Zephyr-drone

./: .gitignore  README.md  TODO.txt  drone_ctrl.cpp  drone_ctrl.elf  drone_ctrl.hex
Cpp/: aruco.cpp  aruco.h  detect.cpp
Docs/: DTU Presentation.pptx
Logs and videos/: 23-04-2023 - flight 3.txt
Maple/: Differentiator_vel.mw  bilinear_controller_transform.mw
Matlab/: Drone.slxc  hexacopter_sim.slx.autosave  motor_model.slx  motor_model.slxc  motor_params.m  report_plots.asv  report_plots.m
Matlab_old/: Drone.slx  Drone.slx.autosave  Drone.slx.original  Drone.slxc  Drone_old.slx  Params.m  PositionController.mlx  pidsolver.m  untitled.mlx
Models/: CamHolderLeft.stl  CamHolderRight.stl
OptiTrack/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PacketClient.sln  PacketClient.vcxproj  PacketClient.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Python/: SolvingMarcusProblem.ipynb  Wed-May-3-14_29_37-2023.csv  another_callib_approach.ipynb  another_callib_approach_that_actually_works.ipynb  aruco.ipynb  aruco_script.py  convert.py  height_control.ipynb  plot.ipynb  python_refuses_error.py  report_plots.ipynb
Sim videos/: 19-04-2023 flight 2.txt  25-04-2023 - 13-29.txt
drone/aruco_tracking/: CMakeLists.txt  main.cpp
drone/aruco_tracking/include/: aruco_config.hpp  aruco_tracker.hpp
drone/aruco_tracking/src/: aruco_tracker.cpp  aruco_tracker_test.cpp
drone/mission/mission/: CMakeLists.txt
drone/mission/mission/include/: controller.h  pid.h
drone/mission/mission/src/: controller.cpp
matlab/: temp.m  (+21 more)
(+395 files in other folders)
