cmake_minimum_required(VERSION 2.8)
project( ArucoTracker )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
file(GLOB_RECURSE SRC_FILES src/*.cpp)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ArucoTracker main.cpp )
target_include_directories(ArucoTracker PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
target_link_libraries( ArucoTracker ${OpenCV_LIBS} pthread )